# advent

./: Cargo.toml  Readme.md  claude-log.md  justfile
.github/workflows/: rust.yml
benches/: Cargo.toml  bench.rs  data.csv
benches/benches/: bench.rs
benches/src/: bar_chart.rs  main.rs  read.rs  readme.tmpl  write.rs
common/src/: grid.rs  lib.rs
src/: computer.rs  grid.rs  lib.rs
src/day01/: Readme.md  mod.rs
src/day1/: mod.rs
src/day10/: Readme.md  mod.rs
src/day11/: Readme.md  mod.rs
src/day2/: Readme.md  mod.rs
src/day3/: Readme.md  mod.rs
src/day4/: Readme.md  mod.rs
src/day5/: Readme.md  mod.rs
src/day6/: Readme.md  mod.rs
src/day7/: Readme.md  mod.rs
src/day8/: Readme.md  mod.rs
src/day9/: Readme.md  mod.rs
y2022/: Cargo.toml
y2022/src/day16/: Readme.md  mod.rs
y2023/: Cargo.toml
y2023/src/day1/: Readme.md  mod.rs
y2023/src/day2/: Readme.md  mod.rs
y2024/: Cargo.toml
y2024/src/: computer.rs  lib.rs
y2024/src/day1/: Readme.md  mod.rs
y2024/src/day10/: Readme.md  mod.rs
y2024/src/day11/: Readme.md  mod.rs
y2024/src/day12/: Readme.md  mod.rs
y2024/src/day13/: Readme.md  mod.rs
y2024/src/day14/: Readme.md  mod.rs
y2024/src/day15/: Readme.md  mod.rs
y2024/src/day16/: Readme.md  mod.rs  tmp.txt
y2024/src/day17/: Readme.md  mod.rs
y2024/src/day18/: Readme.md  mod.rs
y2024/src/day19/: Readme.md  mod.rs
y2024/src/day2/: Readme.md  mod.rs
y2024/src/day20/: Readme.md  mod.rs
y2024/src/day21/: Readme.md  mod.rs
y2024/src/day22/: Readme.md  mod.rs
y2024/src/day23/: Readme.md  mod.rs
y2024/src/day24/: Readme.md  mod.rs
y2024/src/day25/: Readme.md  mod.rs
y2024/src/day3/: Readme.md  mod.rs
y2024/src/day4/: Readme.md  mod.rs
y2024/src/day5/: Readme.md  mod.rs
y2024/src/day6/: Readme.md  mod.rs
y2024/src/day7/: Readme.md  mod.rs
y2024/src/day8/: Readme.md  mod.rs
y2024/src/day9/: Readme.md  mod.rs
y2025/: Cargo.toml
