[workspace]
resolver = "2"
members = [
    "benches", 
    "common", 
    "y2023",
    "y2024",
]

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1.0"
phf = { version = "0.11", features = ["macros"] }
rayon = "1.10.0"
regex = "1.11.1"
scan_fmt = "0.2.6"
winnow = "0.6.20"

[profile.bench]
lto = true
