[workspace]
resolver = "2"
members = [
    "benches", 
    "common", "y2022", 
    "y2023",
    "y2024",
]

[workspace.dependencies]
ahash = "0.8.12"
anyhow = "1.0"
phf = { version = "0.13.1", features = ["macros"] }
rayon = "1.11.0"
regex = "1.12.2"
scan_fmt = "0.2.6"
winnow = "0.7.13"

[profile.bench]
lto = true
