[package]
name = "advent-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
criterion = "0.5.1"
csv = "1.3.1"
glob = "0.3.1"
paste = "1.0"
plotlars = "0.8.0"
polars = "0.45.1"
regex.workspace = true
scan_fmt.workspace = true
serde = "1.0.216"
serde_json = "1.0.134"
y2023 = { path = "../y2023" }
y2024 = { path = "../y2024" }

[[bench]]
name = "bench"
harness = false
