[package]
name = "advent-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
crabtime = "1.1.4"
criterion = "0.7.0"
csv = "1.4.0"
glob = "0.3.3"
plotters = "0.3"
regex.workspace = true
scan_fmt.workspace = true
serde = "1.0.228"
serde_json = "1.0.145"
y2022 = { path = "../y2022" }
y2023 = { path = "../y2023" }
y2024 = { path = "../y2024" }

[[bench]]
name = "bench"
harness = false

[build-dependencies]
glob = "0.3.3"