[package]
name = "y2024"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true } 
ahash = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
scan_fmt = { workspace = true }
winnow = { workspace = true }

common = { path = "../common" }
num = "0.4.3"
